# sn

./: .gitignore  BLUEPRINT.md  CONTEXT.md  README.md  pyproject.toml
docs/: PROJECT_RULES.md
docs/worklogs/: 2026-04-26-12-13-grc-package-rename.md  2026-04-26-12-25-verbose-sync-progress.md  2026-04-26-12-41-metadata-checksum-sync.md  2026-04-26-12-52-frontmatter-archive-state.md  2026-04-26-13-06-yearly-sync-archives.md  2026-04-26-14-13-readme-improvements.md  2026-04-26-14-21-rename-grc-to-sn.md  2026-04-26-14-31-gitsem-tagging.md  2026-04-26-14-34-bump-lxml.md
scripts/: bump-version.sh  validate-worklog.sh
src/grc/: archive_index.py  archive_state.py  cli.py  http.py  manifest.py  markdown_writer.py  models.py  normalize.py  status.py  sync.py
src/sn/: cli.py  html_parser.py  http.py  status.py  text_parser.py
tests/: test_archive_index.py  test_archive_state.py  test_cli.py  test_html_parser.py  test_manifest.py  test_markdown_writer.py  test_normalize.py  test_real_fixtures.py  test_status.py  test_sync.py  test_text_parser.py
tests/fixtures/archive/: securitynow-main.htm
tests/fixtures/transcripts/: sn-1000.htm  sn-1000.txt  sn-1074.htm  sn-1074.txt
