[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sn"
version = "2.0.1"
description = "Security Now transcript archiver"
readme = "BLUEPRINT.md"
requires-python = ">=3.12"
dependencies = [
  "lxml==6.1.0",
  "PyYAML==6.0.2",
]

[project.urls]
Homepage = "https://github.com/aheimsbakk/sn"
Repository = "https://github.com/aheimsbakk/sn"

[project.scripts]
sn = "sn.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
